{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 12961,
  "lineage": "fbab7947-9f17-e2bf-1d2d-8f54fab93e02",
  "resources": [
    {
      "module": "module.bastion_config",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20221004",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devops-361723/zones/us-central1-a/disks/bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devops-361723/zones/us-central1-a/instances/bastion-host",
            "instance_id": "5546495197004981941",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "rZibbDTdr2k=",
            "metadata_startup_script": "while [[ ! -f /home/admin/.ssh/authorized_keys ]]\ndo\n    sleep 10\n    echo \"Sleeping 10 seconds till user is created by the gce instance...\" \u003e\u003e /var/log/startup.log\ndone\necho \"ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCVkl6w+JRCDpQTVrlh8WcSh3sHFWFONax4TwPA0sDH9cWFGIyAHUXOLubEACs79oecxLue9adGKc/tSchcqbZKdR+rbmY9gJP1tai5DARlKZxbEyZJSBzpy1ksJdO6K0CjzVIFj1RsbyDvbraeyaOthcLESgr2vOlJwTr47Dn0zHH/MnFF1/BxXhZgY+ARrHm/+4ARbmzDLPM8g2mxKhwhlGb/I0ycSE+NeH [...]
            "name": "bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.154.196.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc",
                "network_ip": "192.168.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-361723/regions/us-central1/subnetworks/public",
                "subnetwork_project": "devops-361723"
              }
            ],
            "project": "devops-361723",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/zones/us-central1-a/instances/bastion-host",
            "service_account": [
              {
                "email": "devops-admin@devops-361723.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc",
            "module.network_config.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.database_config",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "internal_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "address": "192.168.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-10-14T14:44:57.600-07:00",
            "id": "projects/devops-361723/regions/us-central1/addresses/internal-address-a-net",
            "name": "internal-address-a-net",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "devops-361723",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/regions/us-central1/addresses/internal-address-a-net",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/devops-361723/regions/us-central1/subnetworks/private"
          },
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc",
            "module.network_config.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-10-14T14:44:45.926-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-361723/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc",
            "priority": 1000,
            "project": "devops-361723",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-10-14T14:44:45.965-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-361723/global/firewalls/bastion-firewall",
            "log_config": [],
            "name": "bastion-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc",
            "priority": 1000,
            "project": "devops-361723",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/firewalls/bastion-firewall",
            "source_ranges": [
              "10.174.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "mongo"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mongo_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "27018",
                  "27020"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-10-14T14:44:46.048-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-361723/global/firewalls/mongo-firewall",
            "log_config": [],
            "name": "mongo-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc",
            "priority": 1000,
            "project": "devops-361723",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/firewalls/mongo-firewall",
            "source_ranges": [
              "10.174.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "mongo"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "mongo"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devops-361723/global/networks/mainvpc",
            "mtu": 0,
            "name": "mainvpc",
            "project": "devops-361723",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc"
          }
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "ingress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "route access from the internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/devops-361723/global/routes/ingress-internet",
            "name": "ingress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "devops-361723",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/routes/ingress-internet",
            "tags": [
              "allow-ssh",
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2022-10-14T14:44:46.035-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/devops-361723/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc",
            "project": "devops-361723",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/regions/us-central1/routers/router"
          },
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "devops-361723/us-central1/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "devops-361723",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/devops-361723/regions/us-central1/subnetworks/private",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc",
            "module.network_config.google_compute_router.router",
            "module.network_config.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-14T14:44:46.079-07:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/devops-361723/regions/us-central1/subnetworks/private",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "private",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-361723",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/regions/us-central1/subnetworks/private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_config",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-10-14T14:44:46.762-07:00",
            "gateway_address": "192.168.0.1",
            "id": "projects/devops-361723/regions/us-central1/subnetworks/public",
            "ip_cidr_range": "192.168.0.0/24",
            "name": "public",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-361723/global/networks/mainvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-361723",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-361723/regions/us-central1/subnetworks/public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network_config.google_compute_network.mainvpc"
          ]
        }
      ]
    }
  ]
}